# lol-cast-cli

./: .gitignore  LICENSE  README.md  pyproject.toml
scripts/: ans2png.py  screenshot.sh
src/lolcast/: api.py  app.py  cli.py  events.py  render.py  tui.py
tests/: test_api.py  test_events.py  test_render.py
tests/fixtures/: window_end.json  window_kill.json  window_start.json
