[project]
name = "lol-cast-cli"
version = "0.1.1"
description = "LoL esports live text commentary in your terminal"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "wavewwave20" }]
keywords = ["lol", "esports", "cli", "lolesports", "league-of-legends"]
dependencies = ["requests>=2.31", "rich>=13.7"]

[project.urls]
Repository = "https://github.com/wavewwave20/lol-cast-cli"

[project.scripts]
lolcast = "lolcast.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lolcast"]

[dependency-groups]
dev = ["pytest>=8.0"]
